# cartographer

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
assets/: style.css
cartographer-docs/: index.html  search.json
cartographer-docs/assets/: script.js
cartographer-docs/assets/diagrams/: dependency.mmd  root.mmd
cartographer-docs/modules/root/: admin.html  index.html
docs/: BUILD-PROMPTS.md  SPECS.md  STATE.md  TODOS.md
editors/vscode/: README.md  extension.js  package.json
src/: config.rs  error.rs  lib.rs  main.rs
src/analysis/: cache.rs  dynamic.rs  explain.rs  graph.rs  imports.rs  metrics.rs  mod.rs  modules.rs
src/cli/: args.rs  mod.rs
src/lsp/: analysis.rs  cache.rs  diagnostics.rs  handlers.rs  mod.rs  symbols.rs
src/output/: diagrams.rs  export.rs  html.rs  mod.rs  templates.rs
src/parser/: ast.rs  c.rs  cpp.rs  go.rs  java.rs  javascript.rs  mod.rs  python.rs  rust.rs
templates/: base.html.tera  class.html.tera  function.html.tera  index.html.tera  module.html.tera
tests/: integration_test.rs  lsp_integration.rs
tests/fixtures/complex_project/: __init__.py
tests/fixtures/complex_project/api/: __init__.py  middleware.py  routes.py
tests/fixtures/complex_project/models/: __init__.py  base.py  user.py
tests/fixtures/complex_project/services/: __init__.py  cache_service.py  user_service.py
tests/fixtures/complex_project/utils/: __init__.py  helpers.py  validators.py
tests/fixtures/simple_project/src/: __init__.py  main.py  models.py  utils.py
