[package]
name = "cartographer"
version = "0.1.0"
edition = "2021"
description = "Generate architecture docs from codebases"
license = "MIT"
authors = ["Katie <blackabee@gmail.com>"]
repository = "https://github.com/sudokatie/cartographer"
keywords = ["documentation", "architecture", "code-analysis"]
categories = ["development-tools", "command-line-utilities"]

[dependencies]
clap = { version = "4", features = ["derive"] }
tree-sitter = "0.22"
tree-sitter-python = "0.21"
tree-sitter-javascript = "0.21"
tree-sitter-typescript = "0.21"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tera = "1"
walkdir = "2"
petgraph = "0.6"
rayon = "1"
indicatif = "0.17"
thiserror = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"

[[bin]]
name = "cartographer"
path = "src/main.rs"
